--- a/myAudioRecorder/myAudioRecorder/Storyboards/Base.lproj/Main.storyboard
+++ b/myAudioRecorder/myAudioRecorder/Storyboards/Base.lproj/Main.storyboard
@@ -51,6 +51,9 @@
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJz-Qx-Fqd">
                                                 <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="lJz-Qx-Fqd" secondAttribute="height" multiplier="23:15" id="WXL-NX-XT4"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
