--- a/myAudioRecorder/myAudioRecorder/Storyboards/Base.lproj/Main.storyboard
+++ b/myAudioRecorder/myAudioRecorder/Storyboards/Base.lproj/Main.storyboard
@@ -113,27 +113,45 @@
                         <outlet property="slider" destination="xrR-5l-RTd" id="r5t-H5-SyE"/>
                         <outlet property="tableView" destination="HiL-yr-Hup" id="vQX-4s-Bsv"/>
                         <outlet property="timerLabel" destination="lJz-Qx-Fqd" id="hVg-9Y-eNA"/>
-                        <segue destination="owh-4W-OCB" kind="presentation" id="4Ox-cC-Xby"/>
+                        <segue destination="owh-4W-OCB" kind="presentation" identifier="ShowRecorder" id="4Ox-cC-Xby"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
         </scene>
-        <!--Request Action View Controller-->
+        <!--My Video Recorder View Controller-->
         <scene sceneID="7mv-i5-3x9">
             <objects>
-                <viewController id="owh-4W-OCB" customClass="RequestActionViewController" customModule="myAudioRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="owh-4W-OCB" customClass="myVideoRecorderViewController" customModule="myAudioRecorder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dtz-5m-xLt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Dhq-gL-wew"/>
                     </view>
+                    <connections>
+                        <segue destination="pPM-0f-dba" kind="presentation" identifier="ShowCamera" id="f0H-bW-5oM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kTe-un-3vX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1851" y="263"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="LL5-Tg-AqZ">
+            <objects>
+                <viewController id="pPM-0f-dba" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jF7-1w-GIM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="lhv-Td-5MM"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wmf-5a-0BQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2843" y="263"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="X3K-Ib-fVZ">
