--- a/myMaps/myMaps/Base.lproj/Main.storyboard
+++ b/myMaps/myMaps/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="postButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U9D-Il-5Yz"/>
+                                    <action selector="postButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Onj-ew-URO"/>
                                 </connections>
                             </button>
                         </subviews>
